objects/LAT_ActionKPIMaster__c.object
<CustomObject>
    <fields>
        <fullName>LAT_Description__c</fullName>
        <label>Descrição</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LAT_KPI_OffTrade__c</fullName>
        <defaultValue>false</defaultValue>
        <label>KPI OffTrade</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LAT_KPI_OnTrade__c</fullName>
        <defaultValue>false</defaultValue>
        <label>KPI OnTrade</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LAT_KPI_Recurring__c</fullName>
        <defaultValue>false</defaultValue>
        <label>KPI Recorrente</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LAT_Type__c</fullName>
        <label>Tipo</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sim/Não</fullName>
                </value>
                <value>
                    <fullName>Number</fullName>
                </value>
                <value>
                    <fullName>Text</fullName>
                    <isActive>false</isActive>
                    <label>Text</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>KPI´s Ação Promocional</label>
    <listViews>
        <fullName>All</fullName>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>LAT_Description__c</columns>
        <columns>LAT_KPI_OffTrade__c</columns>
        <columns>LAT_KPI_OnTrade__c</columns>
        <columns>LAT_KPI_Recurring__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Nome</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>KPI´s Ação Promocional</pluralLabel>
    <recordTypes>
        <fullName>LAT_BRStandard</fullName>
        <active>true</active>
        <label>BR Standard</label>
    </recordTypes>
    <recordTypes>
        <fullName>On_Trade</fullName>
        <active>true</active>
        <label>On Trade</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>